--- a/src/pages/MoviesGrid.css
+++ b/src/pages/MoviesGrid.css
@@ -11,7 +11,7 @@
 }
 
 .title .query-text {
-  color: #f7d354;
+  color: #3aa6e4;
 }
 
 .movies-container {
@@ -25,12 +25,13 @@
 
 .movies-container div {
   width: 30%;
-  color: #fff;
+  color: #000000;
   margin-bottom: 2.5rem;
   display: flex;
+  border-radius: 10px;
   flex-direction: column;
   justify-content: space-between;
-  background-color: #111;
+  background-color: #ffffff;
   padding: 1rem;
 }
 
@@ -52,8 +53,8 @@
 }
 
 .movies-container div a {
-  background-color: #f7d354;
-  border: 2px solid #f7d354;
+  background-color: #3aa6e4;
+  border: 2px solid #3aa6e4;
   border-radius: 4px;
   color: #000;
   padding: 1rem 0.5rem;
@@ -63,5 +64,5 @@
 
 .movies-container div a:hover {
   background-color: transparent;
-  color: #f7d354;
+  color: #3aa6e4;
 }
