--- a/src/index.css
+++ b/src/index.css
@@ -6,15 +6,15 @@
   }
   
   body {
-    background-color: #000;
+    background-color: #0c0c0c;
   }
   
   a {
     text-decoration: none;
-    color: #f7d354;
+    color: #000000;
     transition: 0.5s;
   }
   
   a:hover {
-    color: #b8930c;
+    color: #ffffff;
   }
